name:
  laika
version:
  0.2
category:
  Web, HTML, Template
synopsis:
  Minimalistic type-checked compile-time template engine
homepage:
  https://github.com/nikita-volkov/laika
bug-reports:
  https://github.com/nikita-volkov/laika/issues
author:
  Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:
  Nikita Volkov <nikita.y.volkov@mail.ru>
copyright:
  (c) 2015, Nikita Volkov
license:
  MIT
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  >=1.10

source-repository head
  type:
    git
  location:
    git://github.com/nikita-volkov/laika.git

library
  hs-source-dirs:
    library
  exposed-modules:
    Laika.Building
    Laika.Rendering.ByteString.Builder
    Laika.Rendering.ByteString.Lazy
    Laika.Rendering.ByteString.Strict
  other-modules:
    Laika.Prelude
    Laika.Parsing.XMLTree
    Laika.Building.Template
    Laika.Building.XMLTree
    Laika.Building.SnippetExp
    Laika.Building.ByteString.Builder.FixedPrims
    Laika.Building.ByteString.Builder.BoundedPrims
    Laika.Building.ByteString.Builder
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  build-depends:
    -- 
    xml-types == 0.3.*,
    attoparsec == 0.13.*,
    attoparsec-xml >= 0.1.1.1 && < 0.2,
    html-entities >= 1.1.3 && < 2,
    -- 
    template-haskell == 2.11.*,
    -- 
    text >= 1 && < 2,
    bytestring >= 0.10.8 && < 0.11,
    case-insensitive == 1.2.*,
    --
    mtl >= 2 && < 3,
    transformers >= 0.4 && < 0.6,
    semigroups < 2,
    base-prelude < 2,
    base < 5

test-suite demo
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    demo
  main-is:
    Main.hs
  ghc-options:
    -O2
    -threaded
    "-with-rtsopts=-N"
  ghc-prof-options:
    -O2
    -threaded
    -fprof-auto
    "-with-rtsopts=-N -p -s -h -i0.1"
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  build-depends:
    laika,
    rerebase == 1.*
